<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AndroidDevTest</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">register…</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">用户名不可为空</string>
    <string name="invalid_password">密码不少于4个字符</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_username">用户名</string>
    <string name="title_me">My..</string>
    <string name="title_add">新建</string>
    <string name="test_standard">TestString</string>
    <string name="todo">TODO</string>
    <string name="back_to_login">已有账号?登录..</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_studentNo">学号</string>
    <string name="action_reg">Register</string>
    <string name="title_myCenter">PersonalCenter</string>
    <string name="coin_hint">金币:</string>
    <string name="hint_talk_something">聊点啥呗</string>
    <string name="title_activity_complaint">complaintActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cancel">取消</string>
    <string name="publish">发布</string>
    <string name="tittle">标题</string>
    <string name="context">内容</string>
    <string name="import_image">添加图片</string>
    <string name="adress_example">交货地: 天津 津南区</string>
    <string name="price">价格</string>
    <string name="price_example">￥0.00</string>
    <string name="ddl">截止时间</string>
    <string name="ddl_example">2020年1月1日 12:00</string>
    <string name="draft_saved">保存草稿</string>
    <string name="com_num">评分</string>
    <string name="com_ctx">评价</string>
    <string name="commit">提 交</string>
    <string name="say_sth">说点什么吧……</string>
    <string name="username">用户名</string>
    <string name="unseeable">******</string>
    <string name="key">密码</string>
    <string name="pardon_key">确认密码</string>
    <string name="email">邮箱</string>
    <string name="register">注册</string>
    <string name="complaint">投诉</string>
    <string name="complaint_reason_kind">投诉原因类别</string>
    <string name="overrun">未按时交付</string>
    <string name="object_damage">物品损伤</string>
    <string name="unpaid">未支付酬劳</string>
    <string name="other">其他</string>
    <string name="title_activity_order_management">OrderManagementActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_order_m_n">orderMNActivity</string>
    <string name="title_activity_order">orderActivity</string>


</resources>