<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.complaint.complaintActivity">

    <RelativeLayout
        android:id="@+id/pathselect_title"
        android:layout_width="fill_parent"
        android:layout_height="46dip"
        android:gravity="center_vertical"
        android:background="@color/colo_yellow"
        android:padding="0.0px" >

        <Button
            android:id="@+id/commentCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/page_title"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="5dp"
            android:text="@string/com_ctx"
            android:textColor="@color/text_main"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/commentCancel"
            app:layout_constraintTop_toTopOf="parent" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:progressTint="#03A9F4"
            android:rating="4.5"
            android:layout_centerInParent="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.725"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/com_num"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/ratingBar"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5.0dip"
        android:layout_marginRight="5.0dip"
        android:layout_marginTop="5.0dip"
        android:layout_weight="1"
        android:background="@drawable/shape_bg"
        android:fillViewport="true" >

        <EditText
            android:id="@+id/comment_ctx"
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:background="@null"
            android:gravity="left|top"
            android:hint="@string/say_sth"
            android:inputType="textMultiLine"
            android:paddingBottom="4.0dip"
            android:paddingLeft="4.0dip"
            android:paddingRight="4.0dip"
            android:paddingTop="4.0dip"
            android:textSize="16.0sp"
            tools:ignore="RtlHardcoded" />
    </ScrollView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@drawable/shape_line" />

    <Button
        android:id="@+id/commit_btn"
        style="@style/RedGreen"
        android:layout_width="wrap_content"
        android:layout_height="40.0dip"
        android:layout_gravity="right|bottom"
        android:layout_marginBottom="5.0dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="5.0dip"
        android:background="@color/colo_blue"
        android:paddingLeft="15.0dip"
        android:paddingRight="15.0dip"
        android:text="@string/commit"
        tools:ignore="RtlHardcoded" />

</LinearLayout>






