<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colo_bac">

        <View
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colo_yellow"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/orderCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:background="@drawable/style_round_corner_bg"
            android:backgroundTint="@color/shadow_darkGrey"
            android:padding="5dp"
            android:paddingStart="@dimen/half_margin"
            android:paddingEnd="@dimen/half_margin"
            android:text="@string/cancel"
            android:textColor="@color/text_black"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toStartOf="@id/order_title"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/order_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="5dp"
            android:text="编辑任务"
            android:textColor="@color/text_main"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toStartOf="@id/orderPublish"
            app:layout_constraintStart_toEndOf="@id/orderCancel"
            app:layout_constraintTop_toTopOf="@id/header" />

        <TextView
            android:id="@+id/orderPublish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_margin"
            android:background="@drawable/style_round_corner_bg"
            android:backgroundTint="@color/white"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/publish"
            android:textSize="@dimen/text_medium"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/order_title"
            app:layout_constraintTop_toTopOf="@id/header" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colo_white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/orderTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/tittle"
                android:padding="10dp"
                android:textColor="@color/text_main"
                android:textColorHint="@color/text_main1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/orderContext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="start|top"
                android:hint="@string/context"
                android:minHeight="120dp"
                android:padding="10dp"
                android:textColor="@color/text_main"
                android:textColorHint="@color/text_main1"
                android:textSize="16sp" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spinner_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colo_white"
            android:orientation="vertical"
            android:paddingTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier">


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/color_link" />

            <EditText
                android:id="@+id/price_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colo_white"
                android:drawableStart="@drawable/ic_baseline_attach_money_24"
                android:hint="价格"
                android:inputType="numberDecimal"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.0" />


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/color_link" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_dianhua" />

                <TextView
                    android:id="@+id/orderDDL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:padding="5dp"
                    android:text="@string/ddl"
                    android:textColor="@color/text_main"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/time_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:padding="5dp"
                    android:text="@string/ddl_example"
                    android:textColor="@color/text_main1"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/color_link" />


            <TextView
                android:id="@+id/save_draft_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/draft_saved"
                android:textColor="@color/text_main"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_baseline_save_24" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_40"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="spinner_type,spinner_address" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
